# AI-1-obov

./: 1_3_MNIST.ipynb  1_3_MNIST_ACCURACY_PLOTING.ipynb  1_3_MNIST_CROSS_ENTROPY_LOSS.ipynb  1_3_MNIST_OVERFITTING.ipynb  CIFAR10.ipynb  Chapter1-1_심화과제.ipynb  pyproject.toml
week1/: CIFAR10.ipynb  Chapter1-1_기본과제.ipynb  Chapter1-1_심화과제.ipynb  load_my_mnist.ipynb  pyproject.toml
week2/: Chapter1-2_과제B.ipynb  Chapter1-2_과제A.ipynb  Chapter1-2_과제B.ipynb  MHA.ipynb  RNN.ipynb  Transformer.ipynb  normalizer.ipynb  pyproject.toml  transformer_positional_encoder.ipynb
week3/: Chapter2_기본과제.ipynb  Chapter2_심화과제.ipynb  DistilBERT.ipynb  GPT.ipynb  cross_enthropy_loss.ipynb  gpt_small_loader.ipynb  pyproject.toml  tensor.ipynb  tensor_max_mean.ipynb  too_many_indices_for_tensor_of_dimension_2.ipynb  using_attetion_mask.ipynb
week4/: .gitignore  Chapter3_1_기본과제.ipynb  Chapter3_1_심화과제.ipynb  Machine_Translation.ipynb  Transformer.ipynb  aihub_excel_2_ds.ipynb  callback_best_model.py  callback_plot.py  pyproject.toml
week5/: Chapter3_2_기본과제.ipynb  Chapter3_2_심화과제.ipynb  asdf.ipynb  data.json  json_loader.ipynb  llama.ipynb  pyproject.toml  range.ipynb  tqdm.ipynb
week6/: README.md  arg_parser.py  dataset.ipynb  logger.ipynb  my_logger_config.py  pyproject.toml  test_wandb.py  train.bash  train.ipynb  train.py  wandb_alert.ipynb
week7/: README.md  app_rag.py
