[tool.poetry]
name = "week3"
version = "0.1.0"
description = ""
authors = ["obov <obov3e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
tqdm = "^4.66.5"
boto3 = "^1.35.30"
requests = "^2.32.3"
regex = "^2024.9.11"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
datasets = "^3.0.1"
torch = "^2.4.1"
safetensors = "^0.4.5"
tokenizers = "^0.20.0"
importlib-metadata = "^8.5.0"
protobuf = "^5.28.2"
transformers = "^4.45.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
